assets/styles/layout.scss
$background-width: 108vw;
$row-width: 91vh;
// $row-width: 50vw;
$cell-size: $row-width / 3.06;
$title-height: 15%;
$title-width: 45%;
$title-top-padding: 24vh;

body {
  overflow: hidden;
}

.background {
  left: 0;
  position: fixed;
  top: 0;

  width: 100%;
  z-index: -800;
}

.background-vid {
  width: $background-width;
  z-index: -800;
}

.overlay {
  text-align: center;
  width: 100%;
}

.title {
  height: $title-height;
  padding-top: $title-top-padding;
  width: $title-width;
}

.content {
  text-align: center;
}

.game-container {
  clear: both;
  margin: auto;
  text-align: center;
}

.btn-text {
  margin: 1vh 1vw;
  text-align: center;
}

.new-game-btn {
  display: block;
  margin: 3.5vh auto;
  padding: 2px;
  position: relative;
  transition: 2s;
  width: 16vw;
}

.play-again-btn {
  margin: 6.5vh 0 0;
}

.win-tie-message {
  margin: 10vh auto 0;
}

.game-board {
  margin: 2vh auto 0;
  text-align: center;
  vertical-align: top;
}

.board-row {
  margin: auto;
}

.game-cell {
  box-sizing: border-box;
  display: inline-block;
  height: $cell-size;
  margin: $cell-size * .01;
  overflow: hidden;
  padding: 0;
  text-align: center;
  width: $cell-size;
}

.credit {
  bottom: 0;
  margin: 0 0 .5vh 1vw;
  position: absolute;
  text-align: left;
}

